<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/next_game_widget_container_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_item"
    android:elevation="4dp"
    android:orientation="horizontal"
    android:padding="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/next_game_widget_no_matches_textview"
        android:visibility="gone"
        android:textColor="#010101"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/no_matches_today"/>

        <LinearLayout
            android:id="@+id/next_game_widget_home_team_column"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/next_game_widget_home_crest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/no_icon"
                android:contentDescription="@string/home_team_crest" />

            <TextView
                android:id="@+id/next_game_widget_home_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/test_text"
                android:textSize="@dimen/TeamNames"
                android:textColor="#010101" />
        </LinearLayout>



        <LinearLayout
            android:id="@+id/next_game_widget_time_column"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="#010101"
                android:text="@string/next_game_widget_label"
                />

            <TextView
                android:id="@+id/next_game_widget_time_textview"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/test_date"
                android:textColor="#010101" />

        </LinearLayout>



        <LinearLayout
            android:id="@+id/next_game_widget_away_team_column"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/next_game_widget_away_crest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/no_icon"
                android:contentDescription="@string/away_team_crest" />

            <TextView
                android:id="@+id/next_game_widget_away_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/test_text"
                android:textSize="@dimen/TeamNames"
                android:textColor="#010101" />
        </LinearLayout>


</LinearLayout>


